# email-rs

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  compose.yaml  deny.toml  devenv.nix
.github/workflows/: analysis-scorecard.yaml  ci.yaml  release.yaml
crates/email-kit/: Cargo.toml  README.md
crates/email-kit/src/: lib.rs  transport.rs
crates/email-message/: Cargo.toml  README.md
crates/email-message-wire/: Cargo.toml  README.md
crates/email-message-wire/src/: lib.rs  rfc822.rs
crates/email-message-wire/tests/: property_roundtrip.rs  rfc822_attachments.rs  rfc822_edge_cases.rs  rfc822_io.rs
crates/email-message-wire/tests/fixtures/rfc/: rfc2046_multipart_mixed.eml
crates/email-message/benches/: parsing.rs
crates/email-message/fuzz/: Cargo.toml
crates/email-message/fuzz/fuzz_targets/: address_list_from_str.rs
crates/email-message/src/: address.rs  email.rs  lib.rs  message.rs  message_id.rs  mime_types.rs
crates/email-message/tests/: arbitrary_feature.rs  list_constructors.rs  parser_compat.rs  property_roundtrip.rs  property_validators.rs  rfc5322_corpus.rs
crates/email-transport/: Cargo.toml  README.md
crates/email-transport-resend/: Cargo.toml  README.md
crates/email-transport-resend/examples/: resend_send.rs
crates/email-transport-resend/src/: lib.rs  options.rs  transport.rs
crates/email-transport-resend/tests/: conformance.rs  integration_resend.rs
crates/email-transport-test/: Cargo.toml  README.md
crates/email-transport-test/src/: conformance.rs  lib.rs  transport.rs
crates/email-transport-test/tests/: transport.rs
crates/email-transport/src/: lib.rs  options.rs  string_newtype.rs  tracing.rs  transport.rs
crates/email-transport/tests/: property_string_newtypes.rs
crates/restate-email/: Cargo.toml  README.md
crates/restate-email-bin/: Cargo.toml  README.md
crates/restate-email-bin/src/: config.rs  main.rs
crates/restate-email/examples/: invoke_local_worker.rs  restate_email_worker.rs  restate_resend_worker.rs
crates/restate-email/src/: lib.rs  service.rs  transport.rs
crates/restate-email/tests/: send_request_wire.rs  service_contract.rs
crates/restate-email/tests/fixtures/: send_request_base.json  send_request_resend.json
