[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/sagikazarmark/email-rs"
homepage = "https://email-rs.dev"
keywords = ["email", "smtp", "mail", "async", "mailer"]
categories = ["email", "network-programming", "asynchronous"]

[workspace.dependencies]

[workspace.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "Release {{version}}"
tag-prefix = ""
