[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/sagikazarmark/email-rs"
homepage = "https://email-rs.dev"
keywords = ["email", "smtp", "mail", "async", "mailer"]
categories = ["email", "network-programming", "asynchronous"]

[workspace.dependencies]
email-kit = { version = "0.5.0", path = "crates/email-kit", default-features = false }
email-message = { version = "0.5.0", path = "crates/email-message", default-features = false }
email-message-wire = { version = "0.5.0", path = "crates/email-message-wire", default-features = false }
email-transport = { version = "0.5.0", path = "crates/email-transport", default-features = false }
proptest = "1"
schemars = "1.2"
serde = "1"
serde_json = "1"
thiserror = "2"
time = { version = "0.3", default-features = false }

[workspace.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "Release {{version}}"
tag-prefix = ""
