[package]
name = "email-kit"
description = "Convenience facade for the email-rs crates"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
email-message = { workspace = true, default-features = false }
email-message-wire = { workspace = true, default-features = false, optional = true }
email-transport = { workspace = true, default-features = false }
email-transport-resend = { workspace = true, default-features = false, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = ["email-message/default", "email-message-wire?/default", "email-transport/default", "email-transport-resend?/default"]
arbitrary = ["email-message/arbitrary"]
schemars = ["email-message/schemars", "email-transport/schemars"]
serde = ["email-message/serde", "email-transport/serde", "email-transport-resend?/serde"]
tracing = ["email-transport/tracing"]
transport-resend = ["dep:email-transport-resend"]
wire = ["dep:email-message-wire"]

[package.metadata.docs.rs]
all-features = true
