[package]
name = "email-message-wire"
description = "RFC822/MIME wire parsing and rendering for email-message"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = ["email", "mime", "rfc822", "smtp"]
categories = ["email", "encoding"]

[dependencies]
base64 = "0.22"
email-message = { workspace = true, features = ["mime"] }
thiserror = "2"
time = { version = "0.3", default-features = false, features = ["parsing", "formatting"] }

[dev-dependencies]
proptest = "1"
