[package]
name = "email-message"
description = "Typed outbound email message and address model"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
addr-spec = { version = "0.9", features = ["literals"] }
arbitrary = { version = "1", features = ["derive"], optional = true }
base64 = { version = "0.22", optional = true }
mail-parser = "0.11"
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
criterion = "0.8"
proptest = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing"] }

[features]
default = []
# Enables [`mime_types::MimePart`], the multipart/leaf MIME tree used by full-
# message rendering in `email-message-wire`. **Does not pull the third-
# party `mime` crate**, `email-message`'s MIME types are entirely
# in-tree. The feature gate is named for the type it exposes, not for
# any external dependency. The value-object MIME types (`ContentType`,
# `MediaType`, `ParameterValue`, `ContentTransferEncoding`,
# `ContentDisposition`) are always available regardless of feature
# flags.
mime = []
serde = ["dep:serde", "dep:base64", "time/serde"]
schemars = ["dep:schemars"]
arbitrary = ["dep:arbitrary"]
# Accept RFC 5322 string address forms in serde and JSON Schema in addition
# to the typed address object shape.
rfc5322-string-compat = []

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "parsing"
harness = false
