[package]
name = "email-transport"
description = "Transport abstraction for outbound email"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
email-message = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting"] }
tracing = { version = "0.1", default-features = false, features = ["std"], optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
web-time = { version = "1", optional = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["serde"]
serde = ["dep:serde"]
tracing = ["dep:tracing", "dep:web-time"]

[package.metadata.docs.rs]
all-features = true
