[package]
name = "email-transport"
description = "Transport abstraction for outbound email"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
email-message = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting"] }
tracing = { version = "0.1", default-features = false, features = ["std"], optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
web-time = { version = "1", optional = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"

[features]
default = ["serde"]
schemars = ["dep:schemars", "email-message/schemars"]
serde = ["dep:serde", "dep:serde_json", "email-message/serde"]
tracing = ["dep:tracing", "dep:web-time"]

[package.metadata.docs.rs]
all-features = true
