[package]
name = "restate-email-bin"
description = "Runnable Restate email worker binary"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = ["email", "worker", "restate", "queue"]
categories = ["email", "asynchronous"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
email-kit = { workspace = true, default-features = false }
figment = { version = "0.10", features = ["env", "json", "toml", "yaml"] }
restate-email = { workspace = true, default-features = false }
restate-sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }

[features]
default = ["email-kit/default", "restate-email/default", "transport-all"]
transport-all = ["email-kit/transport-all"]

[[bin]]
name = "restate-email"
path = "src/main.rs"
required-features = ["transport-all"]
